# strix

./: .gitignore  requirements.txt  setup.cfg  setup.py  testing-requirements.txt  tox.ini
src/strix/: __init__.py  api.py  cmdline.py  events.py  logger.py  queue.py
src/strix/motion/: __init__.py  config.py
src/strix/ui/: dirlist.tmpl  events.html  index.html  style.css
static/: index.html
test/: motion.conf  thread-1.conf  thread-2.conf
