[metadata]
name        = strix
version     = 0.0.1
description = A Motion Camera API Server and UI
license     = GPLv2
author      = Brian Lane
author_email= bcl@brianlane.com
keywords    = motion security camera strix
url         = https://www.brianlane.com/software/strix.html

[options]
package_dir =
    =src
packages = find:
install_requires =
    bottle
    gevent
    mypy
    Pillow
    rfc3339
    structlog

[options.packages.find]
where = src

[options.package_data]
strix = ui/*

[options.extras_require]
testing =
    coverage
    mypy
    nose
    pylint
    pytest

[build_sphinx]
source-dir = docs/
build-dir  = docs/_build
all_files  = 1

[nosetests]
verbosity=1
detailed-errors=1
with-coverage=1
cover-package=strix
debug=nose.loader
pdb=1
pdb-failures=1
